loot replacements + mob equipment replacements now follow the custom default materials per tier (e.g shows iron for iron tier instead of whatevers at [0]